# cookbook

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
cookbook/: ai.py  config.py  export_html.py  google_photos.py  html_renderer.py  image_processing.py  images.py  main.py  markdown.py  models.py  photos.py  pipeline.py  recipe.py
cookbook/templates/: index.html  recipe.html
cookbook/utils/: datetime.py
tests/: test_ai.py  test_config.py  test_datetime.py  test_export_html.py  test_html_renderer.py  test_image_processing.py  test_main.py  test_markdown.py  test_models.py  test_pipeline.py
